# web_3_course

back/: Dockerfile  main.py  pyproject.toml
back/app/: __init__.py
back/app/api/: api.py  depend.py
back/app/api/endpoint/: auth.py  comment.py
back/app/api/handler/: auth.py  comment.py
back/app/api/schema/: auth.py  comment.py
back/app/config/: config.py
back/app/crud/: __init__.py  crud.py
back/app/crud/site/: client.py  comment.py  signature.py
back/app/model/: client.py
back/app/pkg/database/: postgresql.py  redis.py
back/app/pkg/exception/: base.py  exception.py
back/tests/: test_back.py
